Fixed process building instance to correctly create process
Controller connected to ML service, python ML class called properly. Need to implement NN next.